--- a/style.css
+++ b/style.css
@@ -1,3 +1,20 @@
 body {
   text-align: center;
 }
+
+h1 {
+  font-size: 45px;
+}
+
+h2 {
+  display: inline;
+}
+
+h3 {
+  font-size: 30px;
+  display: inline;
+}
+
+.results {
+  height: 200px;
+}
