--- a/style.css
+++ b/style.css
@@ -11,8 +11,26 @@ h2 {
   font-size: 40px;
 }
 
+p {
+  font-size: 30px;
+  width: 500px;
+  margin-top: -30px;
+}
+
 img {
   width: 200px;
+}
+
+.intro {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.orange {
+  color: orange;
+}
+.lightblue {
+  color: lightblue;
 }
 
 .results {
