--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ h2 {
 
 p {
   font-size: 30px;
-  width: 500px;
+  width: 1000px;
   margin-top: -30px;
 }
 
@@ -64,6 +64,7 @@ img {
   justify-content: center;
   align-items: center;
   font-size: 150px;
+  margin-bottom: 50px;
 }
 
 .player .rectangle {
@@ -75,10 +76,14 @@ img {
 }
 
 .roundResult {
-  margin-bottom: 100px;
+  margin-top: 100px;
 }
 
 .choices {
   display: flex;
   justify-content: space-around;
+}
+
+.choice {
+  height: 200px;
 }
